[package]
name = "vscode2helix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
json_comments = "0"
clap = { version = "3", features = ["derive"] }
actix-web = "4"
